--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="container">
   <header>
     <div class="links">
-    <a href="#">Seasons</a>
+    <a href="#" class="seasons">Seasons</a>
     <a href="#">Episodes</a>
     <a href="#">Manga</a>
   </div>
