--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,15 +26,17 @@
     Whiriten by Koyohary Gotouge
     </p>
 
-    <h1>Demon Slayer</h1>
+    <h1>NARUTO </h1>
 
-    <p>...Demon Slayer is a dark fantasy anime immersed in a battle between
+    <div class="details">
+    <p>...NARUTO is a dark fantasy anime immersed in a battle between
       demons and humans, and many other series have similiary appealing storylines...
     </p>
-
+ 
     <button>
       Watch Now
     </button>
+  </div>
   </div>
   </main>
 
